--- a/trunk/jprime/pom.xml
+++ b/trunk/jprime/pom.xml
@@ -22,5 +22,12 @@
   		<type>jar</type>
   		<scope>test</scope>
   	</dependency>
+  	<dependency>
+  		<groupId>com.beust</groupId>
+  		<artifactId>jcommander</artifactId>
+  		<version>1.11</version>
+  		<type>jar</type>
+  		<scope>compile</scope>
+  	</dependency>
   </dependencies>
 </project>
