--- a/trunk/jprime/pom.xml
+++ b/trunk/jprime/pom.xml
@@ -45,5 +45,21 @@
   		<type>jar</type>
   		<scope>compile</scope>
   	</dependency>
+  	<dependency>
+    	<groupId>org.biojava</groupId>
+    	<artifactId>biojava</artifactId>
+    	<version>1.7.1</version>
+    	<type>jar</type>
+    	<scope>system</scope>
+    	<systemPath>${basedir}/lib/biojava-1.7.1-bin.jar</systemPath>
+	</dependency>
+	<dependency>
+    	<groupId>org.biojava.utils.bytecode</groupId>
+    	<artifactId>biojava.bytecode</artifactId>
+    	<version>1.7.1</version>
+    	<type>jar</type>
+    	<scope>system</scope>
+    	<systemPath>${basedir}/lib/biojava-1.7.1.bytecode.jar</systemPath>
+	</dependency>
   </dependencies>
 </project>
