--- a/trunk/jprime/pom.xml
+++ b/trunk/jprime/pom.xml
@@ -43,25 +43,19 @@
   		<type>jar</type>
   		<scope>test</scope>
   	</dependency>
-  	<dependency>
-  		<groupId>com.beust</groupId>
-  		<artifactId>jcommander</artifactId>
-  		<version>1.11</version>
-  		<type>jar</type>
-  		<scope>compile</scope>
-  	</dependency>
-  	<dependency>
-  		<groupId>ch.qos.logback</groupId>
-  		<artifactId>logback-classic</artifactId>
-  		<version>0.9.26</version>
-  		<type>jar</type>
-  		<scope>compile</scope>
-  	</dependency>
 	<dependency>
-		<groupId>org.apache.mahout.uncommons.math</groupId>
-		<artifactId>uncommons-math</artifactId>
-		<version>1.0.2</version>
+		<groupId>org.biojava</groupId>
+		<artifactId>biojava3-core</artifactId>
+		<version>3.0.1</version>
+		<type>pom</type>
+		<scope>compile</scope>
+	</dependency>
+	<dependency>
+		<groupId>org.biojava</groupId>
+		<artifactId>biojava3-core</artifactId>
+		<version>3.0.1</version>
 		<type>jar</type>
+		<classifier>javadoc</classifier>
 		<scope>compile</scope>
 	</dependency>
 	<dependency>
@@ -73,9 +67,10 @@
 	</dependency>
 	<dependency>
 		<groupId>org.biojava</groupId>
-		<artifactId>biojava3-core</artifactId>
+		<artifactId>biojava3-phylo</artifactId>
 		<version>3.0.1</version>
-		<type>pom</type>
+		<type>jar</type>
+		<classifier>javadoc</classifier>
 		<scope>compile</scope>
 	</dependency>
 	<dependency>
@@ -83,6 +78,89 @@
 		<artifactId>biojava3-alignment</artifactId>
 		<version>3.0.1</version>
 		<type>jar</type>
+		<scope>compile</scope>
+	</dependency>
+	<dependency>
+		<groupId>org.biojava</groupId>
+		<artifactId>biojava3-alignment</artifactId>
+		<version>3.0.1</version>
+		<type>jar</type>
+		<classifier>javadoc</classifier>
+		<scope>compile</scope>
+	</dependency>
+	<dependency>
+		<groupId>com.beust</groupId>
+		<artifactId>jcommander</artifactId>
+		<version>1.18</version>
+		<type>jar</type>
+		<scope>compile</scope>
+	</dependency>
+	<dependency>
+		<groupId>com.beust</groupId>
+		<artifactId>jcommander</artifactId>
+		<version>1.18</version>
+		<type>jar</type>
+		<classifier>javadoc</classifier>
+		<scope>compile</scope>
+	</dependency>
+	<dependency>
+		<groupId>com.googlecode.efficient-java-matrix-library</groupId>
+		<artifactId>ejml</artifactId>
+		<version>0.17</version>
+		<type>jar</type>
+		<scope>compile</scope>
+	</dependency>
+	<dependency>
+		<groupId>com.googlecode.efficient-java-matrix-library</groupId>
+		<artifactId>ejml</artifactId>
+		<version>0.17</version>
+		<type>jar</type>
+		<classifier>javadoc</classifier>
+		<scope>compile</scope>
+	</dependency>
+	<dependency>
+		<groupId>ch.qos.logback</groupId>
+		<artifactId>logback-classic</artifactId>
+		<version>0.9.29</version>
+		<type>jar</type>
+		<scope>compile</scope>
+	</dependency>
+	<dependency>
+		<groupId>ch.qos.logback</groupId>
+		<artifactId>logback-classic</artifactId>
+		<version>0.9.29</version>
+		<type>jar</type>
+		<classifier>javadoc</classifier>
+		<scope>compile</scope>
+	</dependency>
+	<dependency>
+		<groupId>org.uncommons.maths</groupId>
+		<artifactId>uncommons-maths</artifactId>
+		<version>1.2.2</version>
+		<type>jar</type>
+		<scope>compile</scope>
+	</dependency>
+	<dependency>
+		<groupId>org.uncommons.maths</groupId>
+		<artifactId>uncommons-maths</artifactId>
+		<version>1.2.2</version>
+		<type>jar</type>
+		<classifier>javadoc</classifier>
+		<scope>compile</scope>
+	</dependency>
+	<dependency>
+		<groupId>jfree</groupId>
+		<artifactId>jfreechart</artifactId>
+		<version>1.0.8a</version>
+		<type>jar</type>
+		<scope>compile</scope>
+	</dependency>
+	<dependency>
+		<groupId>jfree</groupId>
+		<artifactId>jfreechart</artifactId>
+		<version>1.0.8a</version>
+		<type>jar</type>
+		<classifier>javadoc</classifier>
 		<scope>compile</scope>
 	</dependency>
   </dependencies>
