Make Maven use remote biojava 4.1.0 dependencies instead of local biojava 3

--- a/pom.xml
+++ b/pom.xml
@@ -50,22 +50,22 @@
   	</dependency>
 	<dependency>
 		<groupId>org.biojava</groupId>
-		<artifactId>biojava3-core</artifactId>
-		<version>3.0.1</version>
+		<artifactId>biojava-core</artifactId>
+		<version>4.1.0</version>
 		<type>pom</type>
 		<scope>compile</scope>
 	</dependency>
 	<dependency>
 		<groupId>org.biojava</groupId>
-		<artifactId>biojava3-phylo</artifactId>
-		<version>3.0.1</version>
+		<artifactId>biojava-phylo</artifactId>
+		<version>4.1.0</version>
 		<type>jar</type>
 		<scope>compile</scope>
 	</dependency>
 	<dependency>
 		<groupId>org.biojava</groupId>
-		<artifactId>biojava3-alignment</artifactId>
-		<version>3.0.1</version>
+		<artifactId>biojava-alignment</artifactId>
+		<version>4.1.0</version>
 		<type>jar</type>
 		<scope>compile</scope>
 	</dependency>
