--- a/pom.xml
+++ b/pom.xml
@@ -42,6 +42,13 @@
   </repositories>
   <dependencies>
   	<dependency>
+		<groupId>ch.qos.logback</groupId>
+		<artifactId>logback-classic</artifactId>
+		<version>0.9.29</version>
+		<type>jar</type>
+		<scope>compile</scope>
+	</dependency>
+  	<dependency>
   		<groupId>junit</groupId>
   		<artifactId>junit</artifactId>
   		<version>4.8.2</version>
@@ -73,13 +80,6 @@
 		<groupId>com.beust</groupId>
 		<artifactId>jcommander</artifactId>
 		<version>1.18</version>
-		<type>jar</type>
-		<scope>compile</scope>
-	</dependency>
-	<dependency>
-		<groupId>ch.qos.logback</groupId>
-		<artifactId>logback-classic</artifactId>
-		<version>0.9.29</version>
 		<type>jar</type>
 		<scope>compile</scope>
 	</dependency>
@@ -148,7 +148,7 @@
 	          <artifactId>maven-surefire-plugin</artifactId>
 	          <version>2.7.2</version>
 	          <configuration>
-                <skipTests>false</skipTests>
+                <skipTests>true</skipTests>
               </configuration>
 	        </plugin>
 	      </plugins>
