--- a/pom.xml
+++ b/pom.xml
@@ -56,6 +56,20 @@
 		<version>4.1.0</version>
 		<type>pom</type>
 		<scope>compile</scope>
+        <exclusions>
+            <exclusion>
+            	<groupId>org.apache.logging.log4j</groupId>
+            	<artifactId>log4j-slf4j-impl</artifactId>
+            </exclusion>
+            <exclusion>
+            	<groupId>org.apache.logging.log4j</groupId>
+            	<artifactId>log4j-api</artifactId>
+            </exclusion>
+            <exclusion>
+            	<groupId>org.apache.logging.log4j</groupId>
+            	<artifactId>log4j-core</artifactId>
+            </exclusion>
+        </exclusions>
 	</dependency>
 	<dependency>
 		<groupId>org.biojava</groupId>
@@ -63,6 +77,20 @@
 		<version>4.1.0</version>
 		<type>jar</type>
 		<scope>compile</scope>
+        <exclusions>
+            <exclusion>
+            	<groupId>org.apache.logging.log4j</groupId>
+            	<artifactId>log4j-slf4j-impl</artifactId>
+            </exclusion>
+            <exclusion>
+            	<groupId>org.apache.logging.log4j</groupId>
+            	<artifactId>log4j-api</artifactId>
+            </exclusion>
+            <exclusion>
+            	<groupId>org.apache.logging.log4j</groupId>
+            	<artifactId>log4j-core</artifactId>
+            </exclusion>
+        </exclusions>
 	</dependency>
 	<dependency>
 		<groupId>org.biojava</groupId>
@@ -70,6 +98,20 @@
 		<version>4.1.0</version>
 		<type>jar</type>
 		<scope>compile</scope>
+        <exclusions>
+            <exclusion>
+            	<groupId>org.apache.logging.log4j</groupId>
+            	<artifactId>log4j-slf4j-impl</artifactId>
+            </exclusion>
+            <exclusion>
+            	<groupId>org.apache.logging.log4j</groupId>
+            	<artifactId>log4j-api</artifactId>
+            </exclusion>
+            <exclusion>
+            	<groupId>org.apache.logging.log4j</groupId>
+            	<artifactId>log4j-core</artifactId>
+            </exclusion>
+        </exclusions>
 	</dependency>
 	<dependency>
 		<groupId>com.beust</groupId>
